--- a/ros2_rpi_cv2/install/ros2_rpi_cv2/share/ros2_rpi_cv2/package.xml
+++ b/ros2_rpi_cv2/install/ros2_rpi_cv2/share/ros2_rpi_cv2/package.xml
@@ -13,7 +13,8 @@
   <depend>cv2</depend>
   <depend>cv_bridge</depend>
   <depend>mediapipe</depend>
-  
+  <exec_depend>ros2launch</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
